@@ -28,14 +28,12 @@
 package org.hisp.dhis.tracker.imports.converter;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.note.Note;
-import org.hisp.dhis.tracker.imports.TrackerUserService;
 import org.hisp.dhis.tracker.imports.domain.User;
 import org.hisp.dhis.tracker.imports.preheat.TrackerPreheat;
+import org.hisp.dhis.user.UserDetails;
 import org.hisp.dhis.util.DateUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 /**
@@ -45,9 +43,6 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public class NotesConverterService
     implements TrackerConverterService<org.hisp.dhis.tracker.imports.domain.Note, Note> {
-
-  @Autowired private final TrackerUserService userService;
-
   @Override
   public org.hisp.dhis.tracker.imports.domain.Note to(Note note) {
     org.hisp.dhis.tracker.imports.domain.Note trackerNote =
@@ -68,24 +63,27 @@ public class NotesConverterService
 
   @Override
   public List<org.hisp.dhis.tracker.imports.domain.Note> to(List<Note> notes) {
-    return notes.stream().map(this::to).collect(Collectors.toList());
+    return notes.stream().map(this::to).toList();
   }
 
   @Override
-  public Note from(TrackerPreheat preheat, org.hisp.dhis.tracker.imports.domain.Note note) {
+  public Note from(
+      TrackerPreheat preheat, org.hisp.dhis.tracker.imports.domain.Note note, UserDetails user) {
     org.hisp.dhis.note.Note trackerNote = new org.hisp.dhis.note.Note();
     trackerNote.setUid(note.getNote());
     trackerNote.setAutoFields();
     trackerNote.setNoteText(note.getValue());
 
-    trackerNote.setLastUpdatedBy(userService.getCurrentUser());
+    trackerNote.setLastUpdatedBy(preheat.getUserByUid(user.getUid()).orElse(null));
     trackerNote.setCreator(note.getStoredBy());
     return trackerNote;
   }
 
   @Override
   public List<Note> from(
-      TrackerPreheat preheat, List<org.hisp.dhis.tracker.imports.domain.Note> notes) {
-    return notes.stream().map(n -> from(preheat, n)).collect(Collectors.toList());
+      TrackerPreheat preheat,
+      List<org.hisp.dhis.tracker.imports.domain.Note> notes,
+      UserDetails user) {
+    return notes.stream().map(n -> from(preheat, n, user)).toList();
   }
 }
